# fluid-sim

./: README.md  deploy-application.sh  dev.sh  docker-compose.yml  provision-infrastructure.sh
.husky/: pre-commit
app/: api.Dockerfile  postgres.Dockerfile  render.Dockerfile  websocket.Dockerfile
app/api/: .gitignore  eslint.config.mjs  package-lock.json  package.json  prettier.config.cjs  tsconfig.json
app/api/prisma/: schema.prisma
app/api/src/: index.ts
app/api/src/clients/: clients.ts  cognito.ts  parameters.ts  postgres.ts  redis.ts  s3.ts  secrets.ts  simCache.ts
app/api/src/errors/: HttpError.ts
app/api/src/middleware/: errorHandler.ts  jwtAuth.ts  register.ts
app/api/src/routes/: api.ts  auth.ts  oauth.ts  redis.ts  sim.ts
app/api/src/types/: CookieMap.ts  Session.ts
app/api/src/user/: user.service.ts
app/libs/sim-core/: .dockerignore  Cargo.toml
app/libs/sim-core/src/: hashing.rs  kernels.rs  lib.rs  vector_2d.rs
app/libs/sim-wasm/: Cargo.toml  LICENSE
app/libs/sim-wasm/.cargo/: config.toml
app/libs/sim-wasm/src/: lib.rs
app/redis/: users.acl
app/render/: .gitignore  Cargo.toml  render.py
app/render/src/: main.rs  render.rs  ssm.rs  upload.rs
app/shared/: package-lock.json  package.json  tsconfig.json
app/shared/src/: api.ts  auth.ts  domain.ts  sim.ts
app/web/: .dockerignore  .gitignore  .prettierignore  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
app/web/src/: index.css  main.tsx
app/web/src/api/: auth.ts  client.ts  request.ts  sim.ts
app/web/src/components/: Mfa.css  (+2 more)
app/websocket/: Cargo.toml
app/websocket/src/: callback.rs  main.rs  protocol.rs  sqs.rs
terraform/: .gitignore  acm.tf  alb.tf  cloudfront.tf  cloudinit.tf  cloudwatch.tf  cognito.tf  data.tf  ec2.tf  ecr.tf  ecs.tf  elasticache.tf  envs.tf  lambda.tf  outputs.tf  parameter.tf  providers.tf  route53.tf  s3.tf  secrets.tf  sqs.tf  variables.tf
terraform/cloud-init/: cloud-config-always.yml
terraform/lambdas/: simulation-cleanup.js
terraform/user-data/: api_user_data.sh  postgres_user_data.sh
(+30 files in other folders)
