[package]
name = "websocket"
version = "1.0.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
axum-extra = { version = "0.10.1", features = ["cookie"] }
chrono = "0.4.41"
reqwest = { version = "0.12.23" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sim-core = { path = "../libs/sim-core", features = ["direct-access"] }
tokio = { version = "1.47.1", features = ["full"] }

aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-sqs = "1.86.0"
aws-sdk-s3 = "1.108.0"
aws-sdk-ssm = "1.97.0"
